[gd_scene load_steps=15 format=2]

[ext_resource path="res://MenuElements/LevelSelector.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://MenuElements/LevelImageSwapper.gd" type="Script" id=3]
[ext_resource path="res://Resources/LevelSelectImages/Level_IntroBlocks.PNG" type="Texture" id=4]

[sub_resource type="InputEventAction" id=5]
action = "ui_cancel"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=7]
action = "ui_left"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="Animation" id=2]
resource_name = "swap_left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("OldImage:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.450625, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 150, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OldImage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NewImage:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.45, 1 ),
"update": 0,
"values": [ Vector2( -150, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NewImage:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CurrentImage:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "settle_image"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("NewImage:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("OldImage:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=1]
resource_name = "swap_right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("OldImage:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.450625, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -150, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OldImage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NewImage:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.45, 1 ),
"update": 0,
"values": [ Vector2( 150, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NewImage:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CurrentImage:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "settle_image"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("NewImage:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("OldImage:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="InputEventAction" id=9]
action = "ui_right"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventAction" id=3]
action = "ui_accept"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="LevelRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_left = 53.0
margin_top = 43.0
margin_right = 130.0
margin_bottom = 80.0
shortcut = SubResource( 6 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -340.0
margin_top = 100.0
margin_right = 340.0
custom_constants/separation = 77
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 680.0
margin_bottom = 300.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 300.0

[node name="LeftButton" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 50.0
margin_right = 30.0
margin_bottom = 250.0
rect_min_size = Vector2( 30, 200 )
focus_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 8 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelImage" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 646.0
margin_bottom = 300.0
rect_min_size = Vector2( 612, 300 )
script = ExtResource( 3 )

[node name="OldImage" type="TextureRect" parent="VBoxContainer/HBoxContainer/LevelImage"]
visible = false
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
margin_left = -150.0
margin_right = 462.0
margin_bottom = 300.0
rect_min_size = Vector2( 612, 300 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentImage" type="TextureRect" parent="VBoxContainer/HBoxContainer/LevelImage"]
show_behind_parent = true
rect_min_size = Vector2( 612, 300 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewImage" type="TextureRect" parent="VBoxContainer/HBoxContainer/LevelImage"]
visible = false
show_behind_parent = true
margin_right = 612.0
margin_bottom = 300.0
rect_min_size = Vector2( 612, 300 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/HBoxContainer/LevelImage"]
anims/swap_left = SubResource( 2 )
anims/swap_right = SubResource( 1 )

[node name="PlayLevel" type="TextureButton" parent="VBoxContainer/HBoxContainer/LevelImage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_right = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 650.0
margin_right = 680.0
margin_bottom = 300.0

[node name="RightButton" type="Button" parent="VBoxContainer/HBoxContainer/CenterContainer2"]
margin_top = 50.0
margin_right = 30.0
margin_bottom = 250.0
rect_min_size = Vector2( 30, 200 )
focus_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 10 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 377.0
margin_right = 680.0
margin_bottom = 407.0

[node name="PlayLevel" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 300.0
margin_right = 380.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 30 )
shortcut = SubResource( 4 )
text = "Play"
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LevelImage/PlayLevel" to="." method="_on_PlayLevel_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer2/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/PlayLevel" to="." method="_on_PlayLevel_pressed"]
